# meta-scalar-hack

./: .dockerignore  .gitignore  Blog.md  DEMO_SCRIPT.md  Dockerfile  INSTRUCTIONS.md  README.md  SUBMISSION.md  __init__.py  client.py  fix_notebook.py  grpo_disaster_training (1).ipynb  grpo_disaster_training.ipynb  inference.py  models.py  notebook99e7520250.ipynb  pyproject.toml  run_local.ps1  run_local.sh  smoke_test.py  tasks.py  train_clean.ipynb  validate.sh
results/: baseline_agent_metrics.json  comparison.json  inference_report.json  trained_metrics.json
server/: __init__.py  app.py  support_ops_environment.py
server/ui/: index.html  main.js  styles.css
